--- a/src/app/producto/producto.page.html
+++ b/src/app/producto/producto.page.html
@@ -7,7 +7,7 @@
 
 
     <!-- <ion-toolbar text-center> -->
-    <ion-title class="ion-text-center">
+    <ion-title class="ion-text-center fondo-toolbar">
       <ion-row>
         <ion-col> <img src="../assets/img/cabuto.png" width="150" height="70"></ion-col>
       </ion-row>
@@ -25,7 +25,7 @@
 
   <ion-menu side="start" menuId="custom" contentId="main" class="my-custom-menu">
     <ion-header>
-      <ion-toolbar color="tertiary">
+      <ion-toolbar>
         <ion-title>Menu</ion-title>
       </ion-toolbar>
     </ion-header>
@@ -49,5 +49,38 @@
 
 
 <ion-content>
+  <div class="contenedor-page">
+    <ion-label class="titulo">Productos</ion-label>
+    <!-- Default Searchbar -->
+    <div class="contenedor">
+      <div class="contenedor-searchbar">
+        <ion-input placeholder="¿Qué necesitas?">
 
+        </ion-input>
+        <img src="../assets/img/buscar.png" class="icono">
+      </div>
+
+
+
+      <div class="contenedor-filtro">
+        <ion-item>
+          <ion-label class="subtitulo">Filtrar por:</ion-label>
+          <ion-select>
+            <ion-select-option value="vendidos">Más vendidos</ion-select-option>
+            <ion-select-option value="blonde">$-$$$</ion-select-option>
+            <ion-select-option value="black">$$$-$</ion-select-option>
+            <ion-select-option value="red">A a Z</ion-select-option>
+            <ion-select-option value="red">Z a A</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </div>
+
+    </div>
+
+
+
+
+
+    
+  </div>
 </ion-content>
