--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -9,7 +9,47 @@
 }
 */
 
-.header .toolbar-title{
-    text-align: center;
-    text-indent: -45px;
+.titulo{
+    font-family: var(--ion-font-family);
+    font-weight: bold;
+    font-size: larger;
+    color: var(--ion-color-azul-oscuro);
+}
+
+
+.icono{
+    width: 20px;
+    height: 20px;
+}
+
+ion-toolbar{
+    --background: linear-gradient(to left,var(--ion-color-naranja-oscuro),var(--ion-color-naranja-claro));
+}
+
+
+.contenedor-searchbar{
+    display: flex;
+align-items: center;
+    background: var(--ion-color-gris-claro);
+    color: var(--ion-color-gris-oscuro);
+    border-radius: 5px;  
+    height: 40px; 
+
+
+}
+
+.contenedor{
+    padding: 30px 0px;
+}
+
+ion-input{
+    font-weight: bold;
+}
+
+.contenedor-page{
+    padding: 20px 30px;
+}
+
+.contenedor-filtro{
+    padding: 20px 0px;
 }
