--- a/src/app/producto/producto.page.html
+++ b/src/app/producto/producto.page.html
@@ -1,86 +1,55 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button defaultHref="home"></ion-menu-button>
-    </ion-buttons>
-
-
-
-    <!-- <ion-toolbar text-center> -->
-    <ion-title class="ion-text-center fondo-toolbar">
-      <ion-row>
-        <ion-col> <img src="../assets/img/cabuto.png" width="150" height="70"></ion-col>
-      </ion-row>
-    </ion-title>
-
-
-
-
-  </ion-toolbar>
-
-
-
-
-
-
-  <ion-menu side="start" menuId="custom" contentId="main" class="my-custom-menu">
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content>
-      <ion-list>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-menu>
-
-
-  <ion-router-outlet id="main"></ion-router-outlet>
-
-
-
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button defaultHref="home"></ion-menu-button>
+        </ion-buttons>
+        <!-- <ion-toolbar text-center> -->
+        <ion-title class="ion-text-center fondo-toolbar">
+            <ion-row>
+                <ion-col> <img src="../assets/img/cabuto.png" width="150" height="70"></ion-col>
+            </ion-row>
+        </ion-title>
+    </ion-toolbar>
+    <ion-menu side="start" menuId="custom" contentId="main" class="my-custom-menu">
+        <ion-header>
+            <ion-toolbar>
+                <ion-title>Menu</ion-title>
+            </ion-toolbar>
+        </ion-header>
+        <ion-content>
+            <ion-list>
+                <ion-item>Menu Item</ion-item>
+                <ion-item>Menu Item</ion-item>
+                <ion-item>Menu Item</ion-item>
+                <ion-item>Menu Item</ion-item>
+                <ion-item>Menu Item</ion-item>
+            </ion-list>
+        </ion-content>
+    </ion-menu>
+    <ion-router-outlet id="main"></ion-router-outlet>
 </ion-header>
-
-
 <ion-content>
-  <div class="contenedor-page">
-    <ion-label class="titulo">Productos</ion-label>
-    <!-- Default Searchbar -->
-    <div class="contenedor">
-      <div class="contenedor-searchbar">
-        <ion-input placeholder="¿Qué necesitas?">
-
-        </ion-input>
-        <img src="../assets/img/buscar.png" class="icono">
-      </div>
-
-
-
-      <div class="contenedor-filtro">
-        <ion-item>
-          <ion-label class="subtitulo">Filtrar por:</ion-label>
-          <ion-select>
-            <ion-select-option value="vendidos">Más vendidos</ion-select-option>
-            <ion-select-option value="blonde">$-$$$</ion-select-option>
-            <ion-select-option value="black">$$$-$</ion-select-option>
-            <ion-select-option value="red">A a Z</ion-select-option>
-            <ion-select-option value="red">Z a A</ion-select-option>
-          </ion-select>
-        </ion-item>
-      </div>
-
+    <div class="contenedor-page">
+        <ion-label class="titulo">Productos</ion-label>
+        <!-- Default Searchbar -->
+        <div class="contenedor">
+            <div class="contenedor-searchbar">
+                <ion-input placeholder="¿Qué necesitas?">
+                </ion-input>
+                <img src="../assets/img/buscar.png" class="icono">
+            </div>
+            <div class="contenedor-filtro">
+                <div class="contenedor-selector">
+                    <ion-label class="subtitulo">Filtrar por:</ion-label>
+                    <select class="selector">
+                        <option value="vendidos">Más vendidos</option>
+                        <option value="blonde">$-$$$</option>
+                        <option value="black">$$$-$</option>
+                        <option value="red">A a Z</option>
+                        <option value="red">Z a A</option>
+                    </select>
+                </div>
+            </div>
+        </div>
     </div>
-
-
-
-
-
-    
-  </div>
 </ion-content>
