--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -52,4 +52,24 @@ ion-input{
 
 .contenedor-filtro{
     padding: 20px 0px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.selector{
+    font-family: var(--ion-font-family);
+    font-weight: bold;
+    font-size: medium;
+    color: var(--ion-color-azul-oscuro);
+    background: var(--ion-color-gris-claro);
+padding: 10px 20px;
+    border-radius: 5px;  
+    vertical-align: middle;
+
+}
+
+.subtitulo{
+    color: var(--ion-color-gris-oscuro);
+    font-weight: lighter;
+    padding: 0px 10px 0px 0px;
 }
