--- a/src/app/producto/producto.page.html
+++ b/src/app/producto/producto.page.html
@@ -39,9 +39,9 @@
                 <img src="../assets/img/buscar.png" class="icono">
             </div>
             <div class="contenedor-filtro">
-                <div class="contenedor-selector" >
+                <div class="contenedor-selector">
                     <ion-label class="subtitulo">Filtrar por:</ion-label>
-                    <select class="selector">
+                    <select [(ngModel)]="opcion" class="selector" (change)="capturar()">
                         <option value="vendidos">Más vendidos</option>
                         <option value="menor">$-$$$</option>
                         <option value="mayor">$$$-$</option>
@@ -50,20 +50,51 @@
                     </select>
                 </div>
             </div>
-
-            <tbody>
-    <tr *ngFor="let productos of producto">
-      <td>{{productos.nombre}}</td>
-      <td>{{productos.descripcion}}</td>
-    </tr>
-  </tbody>
-          
-
-           
-
-
-
-
+           <!--  <div>
+                <div class="div-producto" *ngFor="let productos of producto">
+                    <h5>{{productos.nombre}}</h5>
+                    <img src="../assets/img/deja.png" width="100" height="80">
+                </div>
+            </div> -->
+            <div>
+                <div class="contener-producto"  *ngFor="let productos of producto">
+                    <div class="div-producto">
+                        <div class="contener-columna">
+                            <div>
+                                <img src="../assets/img/deja.png" width="100" height="80">
+                            </div>
+                            <div>
+                                <h6>Ver detalle</h6>
+                            </div>
+                        </div>
+                        <div class="contener-columna">
+                            <div>
+                                <h6 class="nombre-producto">{{productos.nombre}}</h6>
+                            </div>
+                            <div class="producto-carrito">
+                                <img src="../assets/img/agregar.png" width="20" height="20" class="btn-producto">
+                                <input type="text" name="" id="" class="estilo-cantidad">
+                                <img src="../assets/img/restar.png" width="15" height="5" class="btn-producto">
+                            </div>
+                        </div>
+                        <div class="contener-columna">
+                            <div>
+                                <h6>$ {{productos.precio}}</h6>
+                            </div>
+                            <div>
+                                <img src="../assets/img/carrito_activo.png" width="30" height="30">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--  <tbody>
+                <tr *ngFor="let productos of producto">
+                    <td>{{productos.nombre}}</td>
+                    <td>{{productos.descripcion}}</td>
+                    <td>{{productos.precio}}</td>
+                </tr>
+            </tbody> -->
         </div>
     </div>
 </ion-content>
