--- a/src/app/shopping-cart/shopping-cart.page.html
+++ b/src/app/shopping-cart/shopping-cart.page.html
@@ -1,5 +1,4 @@
 <app-header></app-header>
-
 <ion-content>
 <h2 class="Titulo">Carrito</h2>
 <ion-row class="Total">
@@ -8,42 +7,72 @@
 </ion-row>
 <ion-list>
   <ion-card>
-
-
-      <ion-row class="agregar" size=5>
-
-        <ion-col size=3>
-          <ion-img src="../assets/img/comida.png" class="foto_producto"></ion-img>
+      <ion-row class="agregar">
+        <ion-col size=3 class="col_foto_producto">
+          <ion-img src="../assets/img/deja.png" class="foto_producto"></ion-img>
         </ion-col>
-  
-        <ion-card-title class="nombre_producto">
-          Carne
-        </ion-card-title>
-
-        <ion-col size=2 >
-          <ion-button color="medium" fill="clear" (click)="decreaseCartItem(p)" class="mas">
-            <ion-img src="../assets/img/agregar.png"></ion-img>
-          </ion-button>
-        </ion-col>
-
-        <ion-label class="cantidad" size=2>
-                  1
-        </ion-label>
-
-        <ion-col size=2 >
-          <ion-button color="medium" fill="clear" (click)="increaseCartItem(p)" class="menos">
-            <ion-img src="../assets/img/restar.png" ></ion-img>
-          </ion-button>
-        </ion-col>
-        <ion-col size=2 class="unitario">
-          $1,16
+        <ion-col size=9 class="detalle">
+          <ion-row >
+            <ion-button (click)="increaseCartItem(p)" class="borrar_content" color="medium" fill="clear">
+              <ion-img src="../assets/img/borrar.png" class="borrar"></ion-img>
+            </ion-button>
+          </ion-row>
+          <ion-row>
+            <ion-card-title class="nombre_producto">
+              Deja
+            </ion-card-title>
+          </ion-row>
+          <ion-row>
+            <ion-col size=8>
+              <ion-row class="row_detalles">
+                  <ion-button (click)="increaseCartItem(p)" class="restar_content" color="medium" fill="clear">
+                    <ion-img src="../assets/img/restar.png" class="restar"></ion-img>
+                  </ion-button>
+                  <ion-button class="cantidad" color="medium" fill="clear">
+                    20
+                  </ion-button>
+                  <ion-button (click)="decreaseCartItem(p)" class="sumar_content" color="medium" fill="clear">
+                    <ion-img src="../assets/img/agregar.png" class="sumar"></ion-img>
+                  </ion-button>
+              </ion-row>
+            </ion-col>
+            <ion-col size=4 class= "col_unitario">
+              <ion-label class="unitario">
+                $30,16
+              </ion-label>
+            </ion-col> 
+          </ion-row>
         </ion-col>
       </ion-row>
-  
-    
   </ion-card>
 </ion-list>
   <ion-img src="../assets/img/pagar.png" class="pagar"></ion-img>
 </ion-content>
-
 <app-footer></app-footer>
+
+
+
+<!--<ion-col size=5>
+  <ion-card-title class="nombre_producto" size=8>
+    Carne
+  </ion-card-title>
+</ion-col>
+<ion-col size=4>
+  <ion-row>
+    <ion-col size=4 >
+      <ion-img src="../assets/img/agregar.png" (click)="decreaseCartItem(p)" class="mas"></ion-img>
+    </ion-col>
+    <ion-label class="cantidad" size=2>
+          1
+    </ion-label>
+    <ion-col size=1 >
+        <ion-img src="../assets/img/restar.png" (click)="increaseCartItem(p)" class="menos"></ion-img>
+    </ion-col>
+  </ion-row>
+</ion-col>
+<ion-col size=3>
+  
+  <ion-col size=3 class="unitario">
+    $1,16
+  </ion-col>
+</ion-col>-->
