login and register

--- a/src/app/auth/register/register.page.scss
+++ b/src/app/auth/register/register.page.scss
@@ -2,8 +2,12 @@ ion-toolbar{
     --background: linear-gradient(to left top,var(--ion-color-naranja-oscuro),var(--ion-color-naranja-claro));
 }
 ion-title{
-    width: auto;
+    /*width: auto;*/
     --color: #fff;
+    width: 100%; 
+    position: absolute; 
+    left: 0; 
+    height: 0%;
 }
 ion-item{
     padding: 14px;
@@ -30,52 +34,83 @@ ion-button{
 .contenedor{
     width: auto;
 }
-
-.regresar{
-    display: flex;
-    justify-content: start;
-    /*align-content: start;
-    align-items: start;*/
-    --background: linear-gradient(to left top,var(--ion-color-naranja-oscuro),var(--ion-color-naranja-claro));
-    font-size: 30px;
-    display: inline-block;
-
-    padding: 20px;
+.container{
+    width: 100%;
 }
 
-.logo{
+  .col_back{
+    text-align: center;
+}
+
+.regresar > img{
+    width: 120%;
+    height: 180%;
+    padding: 50% 0% 0% 40%;
+}
+
+.regresar{
+    text-align: center;
+    padding: 30% 20% 0% 10%;
+    margin:auto;
+    display: flex;
+    --color-selected: #fff;;
+    --color: #fff;
+    /*justify-content: start;
+    align-content: start;
+    align-items: start;*/
+    --background: linear-gradient(to left top,var(--ion-color-naranja-oscuro),var(--ion-color-naranja-claro));
+    /*font-size: 30px;
+    display: inline-block;
+
+    padding: 20px;*/
+}
+
+.col_logo{
+    text-align: center;
+}
+
+/*.logo{
     display: flex;
     justify-content: center;
-    /*align-content: center;
-    align-items: center;*/
+    align-content: center;
+    align-items: center;
     
     display: inline-block;
     font-size: 20px;
     padding: 20px;
+}*/
+.logo{
+    text-align: right;
+    padding: 5% 0% 0% 0%;
+    margin: auto;
+}
+
+.logo > img{
+    margin: auto;
+    width: 70%;
+    height: 110%;
+}
+
+
+.col_title{
+    text-align: left;
 }
 
 .registro{
-    display: flex;
+    /*display: flex;
     justify-content: end;
-    /*align-content: center;
-    align-items: center;*/
+    align-content: center;
+    align-items: center;
     display: inline-block;
     font-size: 20px;
-    padding: 20px;
+    padding: 20px;*/
+    text-align: left;
+    padding: 50% 40% 0% 0%;
+    margin:auto;
+    width: 190%;
 }
 
-.nav {
-    list-style-type: none;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .nav li {
-    display: inline-block;
-    font-size: 20px;
-    padding: 20px;
-  }
   .perfil{
     text-align: center;
   }
+
