--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -45,3 +45,29 @@ ion-button{
     align-content: center;
     align-items: center;
 }
+
+.col_fb{
+    padding: 10px 5px 5px 5px;
+}
+
+.central_control{
+    position: absolute;
+  top: 50%;
+  margin-top: -50px;
+}
+
+.logo{
+    width: 100%
+}
+
+div.ion-text-center{
+    padding: 0px 40px 0px 40px;
+}
+.fuente-colores{
+    padding: 50px 0px 50px 0px;
+}
+
+
+.fb{
+    width: 100%;
+}
