--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -1,9 +1,8 @@
-
 <ion-header>
   <ion-toolbar> 
       <ion-row class = "container">
         <ion-col class= "col_back" size=1>
-          <div class= "regresar"> <ion-icon name="chevron-back-outline"></ion-icon></div>          
+          <div class= "regresar"> <ion-icon name="chevron-back-outline" routerLink='/login'></ion-icon></div>          
         </ion-col>
         <ion-col class= "col_logo" size= 8>
           <div class= "logo"> <img src="../assets/img/cabuto.png"></div> 
@@ -14,6 +13,7 @@
       </ion-row>
   </ion-toolbar>
 </ion-header>
+
 
 <!--
 <ion-header >
