validaciones en login

--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -170,7 +170,7 @@
     <ion-footer>
   <ion-toolbar >
     <div>
-      <ion-button size="large" type="submit" [disabled]="form.invalid" expand="full">Iniciar Sesión</ion-button>
+      <ion-button class = "inicio" size="large" type="submit" [disabled]="form.invalid" expand="full">Iniciar Sesión</ion-button>
     </div>
   </ion-toolbar>
 </ion-footer>
