--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -19,7 +19,7 @@ ion-item{
     --color: rgb(112, 106, 106);
 }
 
-ion-button{
+ion-button.inicio{
     --background: var(--ion-color-naranja-oscuro);
 }
 
