Login Parcial en facebook

--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -149,7 +149,7 @@
         </p><br>
         </ion-col>
       </div>
-      <div class="ion-text-center" color:white>
+      <div class="ion-text-center" size = 15>
             <div text-center class = "fb" size = 10>
                 <ion-button size="large" expand="block" class="centrar-control2" style="background-color: #1b5583" (click)="loginFacebook()">
                   <ion-row class = "container">
