--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -79,10 +79,10 @@ padding: 10px 20px;
      flex-flow: row nowrap; /* Align on the same line */
   justify-content: space-around; 
 vertical-align: middle;
-    box-shadow: 0px 10px 58px 0px rgba(51,45,51,1);
+    box-shadow: 3px 3px 0px 0px #c2c2c2;
 //padding: 20px 0px;
-    border-radius: 10px;
-    height: 120px;
+    border-radius: 20px;
+    height: 130px;
 
 
 }
@@ -115,4 +115,41 @@ vertical-align: middle;}
     font-weight: bold;
     font-size: medium;
     color: var(--ion-color-azul-oscuro);
+            font-size: small;
+
+}
+
+.producto{
+    position: relative;
+    bottom: 20px;
+}
+
+.detalle{
+    position: relative;
+    bottom: 30px;
+    text-align: center;
+    font-style: italic;
+    font-size: small;
+    color: #2153FF;
+}
+
+.nombre{
+    //text-align: justify;
+    width: 160px;
+    height: 90px;
+}
+
+
+.precio{
+    color: var(--ion-color-naranja-oscuro);
+    font-weight: bold;
+    font-size: large;
+     position: relative;
+    right: 16px;
+}
+
+.carrito{
+    position: relative;
+    top: 38px;
+    right: 16px;
 }
