--- a/src/app/producto/producto.page.html
+++ b/src/app/producto/producto.page.html
@@ -72,9 +72,9 @@
                                 <h6 class="nombre-producto" >{{productos.nombre}}</h6>
                             </div>
                             <div class="producto-carrito">
-                                <img src="../assets/img/agregar.png" width="20" height="20" class="btn-producto">
-                                <input type="text" name="" id="" class="estilo-cantidad">
-                                <img src="../assets/img/restar.png" width="15" height="5" class="btn-producto">
+                                <img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas">
+                                <input type="text" name="" id="" class="estilo-cantidad" value="1">
+                                <img src="../assets/img/restar.png" width="10" height="3" class="btn-producto" id="menos">
                             </div>
                         </div>
                         <div class="contener-columna">
