--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -245,16 +245,23 @@
 
 
 
-@font-face{
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: bold;
-  src: url('../assets/font/Roboto-Bold.ttf');
-}
+// @font-face{
+//   font-family: 'Roboto';
+//   font-style: normal;
+//   font-weight: bold;
+//   src: url('../assets/font/Roboto-Bold.ttf');
+// }
+
+// @font-face{
+//   font-family: 'Lato';
+//   font-style: normal;
+//   font-weight: bold;
+//   src: url('../assets/font/Lato-Bold.ttf');
+// }
 
 @font-face{
-  font-family: 'Lato';
+  font-family: 'MyriadProSemibold';
   font-style: normal;
   font-weight: bold;
-  src: url('../assets/font/Lato-Bold.ttf');
+  src: url('../assets/font/Myriad Pro Semibold.ttf');
 }
