--- a/src/app/auth/login/login/login.page.scss
+++ b/src/app/auth/login/login/login.page.scss
@@ -1,3 +1,7 @@
+*{
+    font-family: 'MyriadProSemibold' !important;
+}
+
 ion-toolbar{
     --background: linear-gradient(to left top,var(--ion-color-naranja-oscuro),var(--ion-color-naranja-claro));
     height: 120%;
