--- a/src/app/producto/producto.page.html
+++ b/src/app/producto/producto.page.html
@@ -77,9 +77,9 @@
                                 <img src="../assets/img/restar.png" width="10" height="3" class="btn-producto" id="menos">
                             </div>
                         </div>
-                        <div class="contener-columna">
-                            <div>
-                                <h6 class="precio">$ {{productos.precio}}</h6>
+                        <div class="contener-columna centrar">
+                            <div class="precio">
+                                <h6>$ {{productos.precio}}</h6>
                             </div>
                             <div class="carrito">
                                 <img src="../assets/img/carrito_activo.png" width="30" height="30">
