manejo de sesión con login en fb

--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -32,7 +32,7 @@
     </div>
     <div class="ion-text-center" size = 15>
           <div text-center class = "fb" size = 10>
-              <ion-button size="large" expand="block" class="centrar-control2" style="background-color: #1b5583" (click)="loginFacebook()">
+              <ion-button size="large" expand="block" class="centrar-control2" style="background-color: #1b5583" (click)="facebook()">
                 <ion-row class = "container">
                   <ion-col class= "col_fb" size=3>        
                     <div class= "btn_fb"> <img src="../assets/img/facebook.png"></div>  
