--- a/src/app/auth/registro/registro/registro.page.html
+++ b/src/app/auth/registro/registro/registro.page.html
@@ -21,7 +21,7 @@
        <ion-col align-self-center size-md="4" size-lg="10" size-xs="10">
          <div class= "perfil"> <img src="../assets/img/avatar_perfil.png" width="170" height="100"></div> 
            <ion-item >
-             <ion-input  name="cedula" type="text" placeholder="RUC/Cedula" ngModel required></ion-input>
+             <ion-input  name="cedula" type="number" placeholder="RUC/Cedula" ngModel required></ion-input>
            </ion-item>
            <ion-item >
              <ion-input name="email" type="email" placeholder="your@email.com" ngModel required></ion-input>
