[#173932228] registro con imagen

--- a/src/app/auth/registro/registro/registro.page.html
+++ b/src/app/auth/registro/registro/registro.page.html
@@ -19,7 +19,20 @@
    <ion-grid >
      <div class="form" >
        <ion-col align-self-center size-md="4" size-lg="10" size-xs="10">
-         <div class= "perfil"> <img src="../assets/img/avatar_perfil.png" width="170" height="100"></div> 
+         <div class= "perfil"> 
+          <!-- 
+          <img [src]="url ? url : '../assets/img/avatar_perfil.png'" width="160" height="100">
+           <input type='file' (change)="onSelectFile($event)" class="select-profile-picture">
+          -->
+           <label class="hoverable" for="fileInput">
+            <img [src]="url ? url : '../assets/img/avatar_perfil.png'"> 
+            <div class="hover-text">Choose file</div>
+            <div class="background"></div>
+          </label>
+          <br/>
+          <input id="fileInput" type='file' (change)="onSelectFile($event)">
+          <button *ngIf="url" (click)="delete()" >delete</button>
+          </div> 
            <ion-item >
              <ion-input  name="cedula" type="number" placeholder="RUC/Cedula" ngModel required></ion-input>
            </ion-item>
